--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alekseynikolsky",
+  "name": "alekseynikolsky.com",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -10,12 +10,16 @@
     "react": "^15.3.2",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.3.2",
-    "react-router": "^4.0.0-alpha.3"
+    "react-router": "^4.0.0-alpha.3",
+    "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "./config/eslint.js"
   }
 }
