Fix homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alekseynikolsky.com",
-  "homepage": "http://andrewzey.github.io/alekseynikolsky",
+  "homepage": "https://alekseynikolsky.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
