--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "react-scripts": "0.5.1"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "^15.3.2",
-    "react-document-title": "^2.0.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^4.0.0-alpha.3",
-    "reflexbox": "^2.2.2",
-    "whatwg-fetch": "^1.0.0"
+    "classnames": "2.2.5",
+    "react": "15.3.2",
+    "react-document-title": "2.0.2",
+    "react-dom": "15.3.2",
+    "react-ga": "^2.1.2",
+    "react-router": "4.0.0-alpha.3",
+    "reflexbox": "2.2.2",
+    "whatwg-fetch": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
