--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "0.5.1"
   },
   "dependencies": {
+    "babel-polyfill": "6.16.0",
     "classnames": "2.2.5",
     "react": "15.3.2",
     "react-document-title": "2.0.2",
