--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "15.3.2",
     "react-document-title": "2.0.2",
     "react-dom": "15.3.2",
-    "react-ga": "^2.1.2",
+    "react-ga": "2.1.2",
     "react-router": "4.0.0-alpha.3",
     "reflexbox": "2.2.2",
     "whatwg-fetch": "1.0.0"
