--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "chai": "3.5.0",
+    "enzyme": "2.5.1",
+    "react-addons-test-utils": "15.3.2",
     "react-scripts": "0.5.1"
   },
   "dependencies": {
     "babel-polyfill": "6.16.0",
     "classnames": "2.2.5",
     "react": "15.3.2",
+    "react-addons-css-transition-group": "15.3.2",
     "react-document-title": "2.0.2",
     "react-dom": "15.3.2",
     "react-ga": "2.1.2",
