Add AudioPlayer and CompositionRow components

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-document-title": "2.0.2",
     "react-dom": "15.3.2",
     "react-ga": "2.1.2",
+    "react-responsive-audio-player": "0.3.0",
     "react-router": "4.0.0-alpha.3",
     "reflexbox": "2.2.2",
     "whatwg-fetch": "1.0.0"
