--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "chai": "3.5.0",
     "enzyme": "2.5.1",
     "react-addons-test-utils": "15.3.2",
-    "react-scripts": "0.5.1"
+    "react-scripts": "^1.0.5"
   },
   "dependencies": {
     "babel-polyfill": "6.16.0",
