--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-responsive-audio-player": "0.3.0",
     "react-router": "4.0.0-alpha.3",
     "reflexbox": "2.2.2",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
