Upgrade babel-polyfill, react-document-title, reflexbox

--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "react-scripts": "^1.0.5"
   },
   "dependencies": {
-    "babel-polyfill": "6.16.0",
+    "babel-polyfill": "^6.23.0",
     "classnames": "2.2.5",
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.3.2",
-    "react-document-title": "2.0.2",
+    "react-document-title": "^2.0.3",
     "react-dom": "15.3.2",
     "react-ga": "2.1.2",
     "react-responsive-audio-player": "0.3.0",
     "react-router": "4.0.0-alpha.3",
-    "reflexbox": "2.2.2",
+    "reflexbox": "^2.2.3",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
