--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "chai": "3.5.0",
-    "enzyme": "^2.8.2",
-    "react-scripts": "^1.0.6"
+    "chai": "4.2.0",
+    "enzyme": "3.11.0",
+    "react-scripts": "3.4.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "classnames": "2.2.5",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-document-title": "^2.0.3",
-    "react-dom": "^15.5.4",
-    "react-ga": "^2.2.0",
-    "react-responsive-audio-player": "^1.1.4",
-    "react-router": "4.0.0-alpha.3",
-    "reflexbox": "^2.2.3",
-    "whatwg-fetch": "^2.0.3"
+    "@emotion/core": "10.0.28",
+    "@emotion/styled": "10.0.27",
+    "babel-plugin-emotion": "10.0.33",
+    "classnames": "2.2.6",
+    "core-js": "3.6.5",
+    "emotion-reset": "2.0.7",
+    "emotion-theming": "10.0.27",
+    "prop-types": "15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-ga": "3.0.0",
+    "react-helmet": "6.1.0",
+    "react-motion": "0.5.2",
+    "react-responsive-audio-player": "1.5.0",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "rebass": "4.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +35,17 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
