--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-dropdown": "1.9.1",
     "react-ga": "3.0.0",
     "react-helmet": "6.1.0",
     "react-motion": "0.5.2",
