--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "homepage": "https://alekseynikolsky.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "devDependencies": {
     "chai": "4.2.0",
     "enzyme": "3.11.0",
