--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
+    "@vercel/analytics": "^1.0.1",
     "babel-plugin-emotion": "10.0.33",
     "classnames": "2.2.6",
     "core-js": "3.6.5",
@@ -23,7 +24,6 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-dropdown": "1.9.1",
-    "react-ga": "3.0.0",
     "react-helmet": "6.1.0",
     "react-motion": "0.5.2",
     "react-responsive-audio-player": "1.5.0",
