--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-dom": "16.13.1",
     "react-dropdown": "1.9.1",
     "react-helmet": "6.1.0",
+    "react-markdown": "8.0.7",
     "react-motion": "0.5.2",
     "react-responsive-audio-player": "1.5.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "rebass": "4.0.7"
+    "rebass": "4.0.7",
+    "rehype-raw": "6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
